--- a/public/front/src/css/output.css
+++ b/public/front/src/css/output.css
@@ -504,7 +504,9 @@ body,
   font-weight: 600;
 }
 
-.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
+.swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active,
+  .swiper-pagination-2
+    .swiper-pagination-bullet.swiper-pagination-bullet-active {
   background-color: #0d2668 !important;
 }
 
@@ -1025,6 +1027,10 @@ body,
   height: 10px;
 }
 
+.h-\[220px\] {
+  height: 220px;
+}
+
 .h-\[2px\] {
   height: 2px;
 }
@@ -1068,6 +1074,22 @@ body,
 
 .max-h-\[352px\] {
   max-height: 352px;
+}
+
+.max-h-\[440px\] {
+  max-height: 440px;
+}
+
+.max-h-\[445px\] {
+  max-height: 445px;
+}
+
+.max-h-\[435px\] {
+  max-height: 435px;
+}
+
+.min-h-\[100vh\] {
+  min-height: 100vh;
 }
 
 .w-1\/3 {
@@ -1161,6 +1183,10 @@ body,
 
 .max-w-screen-xl {
   max-width: 1280px;
+}
+
+.flex-\[1\] {
+  flex: 1;
 }
 
 .flex-shrink {
@@ -2425,6 +2451,10 @@ body,
   padding-bottom: 0.75rem;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -2507,6 +2537,10 @@ body,
 
 .text-\[19px\] {
   font-size: 19px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[24px\] {
@@ -2617,6 +2651,11 @@ body,
 .text-\[\#696969\] {
   --tw-text-opacity: 1;
   color: rgb(105 105 105 / var(--tw-text-opacity));
+}
+
+.text-\[\#ffffff\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-\[red\] {
@@ -3359,6 +3398,10 @@ body,
 }
 
 @media(max-width:650px) {
+  .\[\@media\(max-width\:650px\)\]\:h-\[350px\] {
+    height: 350px;
+  }
+
   .\[\@media\(max-width\:650px\)\]\:text-\[40px\] {
     font-size: 40px;
   }
@@ -3384,6 +3427,14 @@ body,
 }
 
 @media(max-width:768px) {
+  .\[\@media\(max-width\:768px\)\]\:block {
+    display: block;
+  }
+
+  .\[\@media\(max-width\:768px\)\]\:hidden {
+    display: none;
+  }
+
   .\[\@media\(max-width\:768px\)\]\:h-\[25px\] {
     height: 25px;
   }
@@ -3469,6 +3520,10 @@ body,
 
   .\[\@media\(min-width\:1000px\)\]\:h-\[30px\] {
     height: 30px;
+  }
+
+  .\[\@media\(min-width\:1000px\)\]\:h-\[600px\] {
+    height: 600px;
   }
 
   .\[\@media\(min-width\:1000px\)\]\:w-\[30px\] {
@@ -3610,6 +3665,10 @@ body,
     height: 180px;
   }
 
+  .\[\@media\(min-width\:650px\)\]\:h-\[400px\] {
+    height: 400px;
+  }
+
   .\[\@media\(min-width\:650px\)\]\:text-\[50px\] {
     font-size: 50px;
   }
@@ -3635,6 +3694,14 @@ body,
 }
 
 @media(min-width:768px) {
+  .\[\@media\(min-width\:768px\)\]\:flex {
+    display: flex;
+  }
+
+  .\[\@media\(min-width\:768px\)\]\:hidden {
+    display: none;
+  }
+
   .\[\@media\(min-width\:768px\)\]\:h-\[250px\] {
     height: 250px;
   }
